Refactor BG structure, and allow Game to process singleton actions